Archive2/42/445e1434ecf0e8/output
main.cpp: In function ‘int main()’:
main.cpp:11:5: error: static assertion failed: 
     static_assert( std::is_same<decltype( one(0) ), decltype( two(0) )>(), "" );
     ^
